--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div class="topnav">
+          <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <a href="tyson.jpg">About</a>
             <a href="https://freewallpapers214.blogspot.com">Graphics Designer</a>
-        </div>
-        
-        <div>
-            <p>GRAPHICS DESIGNER</p>
-        </div>     
-        <button onclick="setTimeout(myFunction, 50);">DARE TO CLICK!</button>      
+          </div>
+          <p>GRAPHICS DESIGNER</p>
+          <div>
+            <button class="dare" onclick="setTimeout(myFunction, 50);">CLICK</button>  
+          </div>
+          <pre>
+
+
+
+          </pre>
+          <div>
+          <a href="videoplayback.mp4"><button class="rickroll">About me</button></a>
+          </div>
+          
     </body>
 </html>
