--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script  type="text/javascript" Src="script.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <title>SEFIN FRIJO</title>
         <meta charset="utf-8">
     </head>
